[package]
name = "decimal-crates-comparison"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
rust_decimal = "1.40.0"
fastnum = "0.7.4"
bigdecimal = "0.4.10"
decimax = "0.2.0"
primitive_fixed_point_decimal = "1.4.2"

[[bench]]
name = "add"
harness = false

[[bench]]
name = "mul"
harness = false

[[bench]]
name = "div"
harness = false
